# aaudio-forwarder

./: README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/workflows/: build.yml  wrapper.yml
app/: CMakeLists.txt  build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: CMakeLists.txt  audio_capture.cpp  audio_capture.h  jni_bridge.cpp  main.cpp  network_client.cpp  network_client.h  network_sender.cpp  network_sender.h
app/src/main/java/com/aaudio/forwarder/: AudioForwardService.java  AudioForwardService.kt  MainActivity.java  MainActivity.kt
app/src/main/kotlin/com/android/sound/helper/: AudioForwardService.kt  MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
